--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -1,9 +1,11 @@
 {
-    "release-type": "node",
-    "package-name": "issue-milestoner",
-    "include-component-in-tag": false,
-    "bump-minor-pre-major": true,
-    "bump-patch-for-minor-pre-major": true,
+    "packages": {
+        ".": {
+            "release-type": "simple",
+            "package-name": "issue-milestoner",
+            "include-component-in-tag": false
+        }
+    },
     "changelog-sections": [
         {
             "type": "feat",
@@ -25,8 +27,5 @@
             "type": "ci",
             "section": "CI/CD"
         }
-    ],
-    "commit-search-depth": 500,
-    "pull-request-title-pattern": "chore: release ${version}",
-    "pull-request-header": "This PR was generated automatically by [Release Please](https://github.com/googleapis/release-please)."
+    ]
 }
