fix(ci): add missing checkout to auto-milestone-wishlist

--- a/.github/workflows/auto-milestone-wishlist.yaml
+++ b/.github/workflows/auto-milestone-wishlist.yaml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.issue.labels.*.name, 'enhancement')
     steps:
+      - name: Checkout code
+        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # ratchet:actions/checkout@v4
+      
       - name: Assign Enhancement Issues to Wishlist Milestone
         uses: ./
         with:
