--- a/action.yaml
+++ b/action.yaml
@@ -55,4 +55,8 @@ runs:
         ISSUE_TYPE: ${{ inputs.issue-type }}
         ISSUE_LABEL: ${{ inputs.issue-label }}
         REPOSITORY: ${{ inputs.repository }}
-      run: ${{ github.action_path }}/assign-milestone.sh
+      run: |-
+        # Composite actions need GITHUB_OUTPUT set explicitly
+        export GITHUB_OUTPUT="${GITHUB_OUTPUT:-${RUNNER_TEMP:-/tmp}/github_output_$$}"
+        touch "${GITHUB_OUTPUT}"
+        ${{ github.action_path }}/assign-milestone.sh
