docs: update README version examples

--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -3,7 +3,10 @@
         ".": {
             "release-type": "simple",
             "package-name": "issue-milestoner",
-            "include-component-in-tag": false
+            "include-component-in-tag": false,
+            "extra-files": [
+                "README.md"
+            ]
         }
     },
     "changelog-sections": [
